# ResumeMatchAI

./: README.md
backend/: .gitignore  database.py  exceptions.py  main.py  models.py  requirements.txt
backend/auth/: routes.py  schemas.py  utils.py
backend/upload/: routes.py  s3_service.py  schemas.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: dashboard-nav.tsx  login-form.tsx  signup-form.tsx
frontend/workflow/auth/login/: api_gateway.ts  controller.ts
streamlit_app/: LLM_SETUP.md  README.md  app.py  download_model.py  main.py  pyproject.toml  requirements.txt  simple_test.py  test_comprehensive.py  test_keywords.py  test_llm.py  test_llm_detailed.py
streamlit_app/utils/: ats_scoring.py  document_analyzer.py  keywords_extraction.py  llama_model.py  postgres_client.py  profile_extractor.py  resume_keywords.py
